--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,8 +2,8 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.ai.navigation": "1.0.0-exp.4",
     "com.unity.ads": "4.4.2",
+    "com.unity.ai.navigation": "1.0.0-exp.4",
     "com.unity.analytics": "3.6.12",
     "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "2.0.7",
@@ -11,6 +11,7 @@
     "com.unity.ide.visualstudio": "2.0.21",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.purchasing": "4.9.3",
+    "com.unity.render-pipelines.universal": "12.1.9",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
