--- a/.gitattributes
+++ b/.gitattributes
@@ -55,4 +55,5 @@
 *.reason filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
 
+*.asset -diff -merge
 LightingData.asset binary
